feat:增加预览主题的npm命令

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "license": "MIT",
   "dependencies": {
     "bytemd": "^1.2.0"
+  },
+  "scripts": {
+    "dev": "npx juejin-theme-devtool juejin.scss"
   }
 }
